--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a id="accueil" href="index.html">Accueil</a>
             <a id="spectacle" href="lespectacle.html">Le Spectacle</a>
             <a id="dates" href="dates_et_infos.html">Dates & Infos</a>
-            <a id="contact" href="contact.html">Contact</a>
+            <a id="contact" href="#">Contact</a>
         </nav>
 
         <main>
