--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img src="images/D4A_4166(2).jpg" class="images" alt="choeur Buxtehude">
                 <div class="t" id="t3">Interprétées, chantées, et dansées</div>
                 <div class="t" id="t4"><em>par</em></div>
-                <div class="t" id="space"><a href="http://www.jbmhdanse.com/" target="_blank"><img src="images/JBMH.jpeg" id="JB" class="shadow" alt="logo JMBH"></a><p id="et">et</p><a href="http://www.endimione.org" target="_blank"><img src="images/endimione.jpg" id="endimione" class="shadow" alt="logo Endimione"></a></div>
+                <div class="t" id="space"><a href="http://jbmhdanse.com/" target="_blank"><img src="images/JBMH.jpeg" id="JB" class="shadow" alt="logo JMBH"></a><p id="et">et</p><img src="images/endimione.jpg" id="endimione" class="shadow" alt="logo Endimione"></div>
                 <img src="images/bleu_retouche.jpg" class="images" alt="danse bleu">
                 <div class="t" id="t5">Dirigées par Didier Oueillé</div>
                 <img src="images/JLC_3721.jpg" class="images">
