--- a/lespectacle.html
+++ b/lespectacle.html
@@ -34,8 +34,8 @@
                 <h1>Les Artistes</h1>
                 <div id="danse" class="image"><h3 id="danseuses">Les Danseuses</h3></div>
                 <div class="description">
-                    <a href="http://www.jbmhdanse.com/" target="_blank"><img id ="JBMH" src="images/JBMH.jpeg"  alt="logo JBMH"></a>
-                    <p class="textedroite"> Le <a href="http://www.jbmhdanse.com/" target="_blank"><strong>Jeune Ballet de Montpellier Hérault</strong></a>     s'est joint à Endimione pour réaliser <strong>FUSION</strong>.<br/>
+                    <a href="http://jbmhdanse.com/" target="_blank"><img id ="JBMH" src="images/JBMH.jpeg"  alt="logo JBMH"></a>
+                    <p class="textedroite"> Le <a href="http://jbmhdanse.com/" target="_blank"><strong>Jeune Ballet de Montpellier Hérault</strong></a>     s'est joint à Endimione pour réaliser <strong>FUSION</strong>.<br/>
                     Le Jeune Ballet de Montpellier et de l'Hérault a été créé pour former de jeunes danseurs à la scène et les préparer aux concours. Toujours beaucoup de travail pour les classes intensives en vue des meilleurs concours qui auront lieu tout au long de l'année. La rencontre avec des professeurs et des chorégraphes de renommée internationale, connus durant notre parcours professionnel, enrichit la formation des jeunes danseurs du JBMH. Après Elisa Mestres, Volodia Fernandez et Morgane Mineau, d'autres élèves sont proches de l'envol... Nous ne sommes que des artisans. Former des enfants à la danse classique et jusqu'au professionnalisme prend du temps, mais quel bonheur lorsqu'ils y parviennent !  <em>(tiré du site de la compagnie)</em><br/><br/>
                     Les dénommées sont : <em>Maëly FREDIER, Léna GRIFFE, Anaelle-Jade M'DALLAL, Mila OLIVE, Isa PAINVIN, Coline PALAT, Anaëlle TANNE, Lucie TOULLEC</em></p>
                 </div>
